--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:animateLayoutChanges="true"
     android:background="@color/off_white_smoke"
     tools:context=".RooletActivity">
 
@@ -21,9 +20,10 @@
         android:id="@+id/groupsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="@dimen/row02"
+        android:clipToPadding="false"
         android:fadingEdge="vertical"
         android:fadingEdgeLength="@dimen/row005"
+        android:paddingTop="@dimen/row02"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
