--- a/app/src/main/res/layout/fragment_group_detail.xml
+++ b/app/src/main/res/layout/fragment_group_detail.xml
@@ -21,9 +21,10 @@
         android:id="@+id/groupsDetailRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:clipToPadding="false"
         android:fadingEdge="vertical"
         android:fadingEdgeLength="@dimen/row005"
-        android:layout_marginTop="@dimen/row02"
+        android:paddingTop="@dimen/row02"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
